# simple_web_app

./: .gitmodules  LICENSE  README.md
arch/: docker-network.drawio  topology.drawio
auto-update/: Dockerfile  pyproject.toml
auto-update/auto_update/: __init__.py
auto-update/auto_update/update/: __init__.py
auto-update/update-worker/: worker.sh
swag/: docker-compose.yml
swag/config/nginx/proxy-confs/: code0.subfolder.conf  code1.subfolder.conf  code2.subfolder.conf  code3.subfolder.conf  code4.subfolder.conf  code5.subfolder.conf  code6.subfolder.conf  code7.subfolder.conf  code8.subfolder.conf  code9.subfolder.conf
swag/config/nginx/site-confs/: default.conf
swag/web/: docker-compose.yml
