[tool.poetry]
name = "auto-update"
version = "0.1.0"
description = ""
authors = ["25077667 <zxc25077667@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_update"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
filelock = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
